Added LogoutTest and change LoginTest. Added validation for token

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -10,12 +10,12 @@ ktor {
 
     database {
         development {
-            connectionString = ""
-            database = ""
+            connectionString = "mongodb+srv://dbBooks:6ww4WyAEmKKSEtW@clusterbooks.igqbl.mongodb.net/Vocabulary?retryWrites=true&w=majority"
+            database = "Vocabulary-dev"
         }
         production {
-            connectionString = ""
-            database = ""
+            connectionString = "mongodb+srv://dbBooks:6ww4WyAEmKKSEtW@clusterbooks.igqbl.mongodb.net/Vocabulary?retryWrites=true&w=majority"
+            database = "Vocabulary"
         }
     }
 }
